  needs to go here later), plus some general refactoring (more info
  here later).

* The $Codestriker::allow_repository configuration variable is removed
  since this boolean value can be dervived from the length of the
  @valid_repositories list.  From Jason Remillard.

* Use tempfile() in Parser.pm to close a potential security hole, from
  Jason Remillard.

Version 1.7.8

* If a badly-formatted repository value from codestriker.conf is used
  when creating a topic, report this in a user-friendly manner.

* Report an error if a new topic to be created specifies both the
  uploaded file and topic tag fields.

* Fixed bug where selecting multiple states in the search screen
  reported an input error.

* HTML escaping for the topic title on the topic confirmation screen,
  project information on the projects screens were not working
  correctly.  Most HTML escaping are now performed within the
  templates directly using the html_entity filter.

* In some cases when displaying comment or topic description text,
  hyperlinks were not automagically being created.  If the text
  contains a URL such as http://zot.com, it needs to be rendered for
  convenience as <A HREF="http://zot.com">http://zot.com</A>.  In
  addition, if the text contains a pattern like [Bb]ug \d+ (ie Bug
  122), this will be hyperlinked to the appropriate URL of the
  bugtracking system, if one has been specified in the Codestriker
  configuration.

* In the view comments screen with context displayed, very long topic
  lines would push the "filename:linenumber", "Parallel" and "Add
  Comment" links way off to the far right of the page, requiring
  horizontal scrolling to see them.  Rework the display so that they
  are always pushed to the left, regardless of the length of the topic
  lines.

* Added "Check All"/"Clear All" links in the view comments page for
  convenience.

* If there is an error in sending an email, make sure a descriptive
  error message is displayed.  Thanks to Jason Remillard