@@ -14,33 +14,51 @@
 
 [%# The author input field #%]
 <TR>
- <TD>Author: </TD>
+ <TD>Author: <FONT SIZE="-2"><A HREF="javascript:alert('
+Constrain the search on topic author, which may be wildcarded\n
+as joe* or joe*company*.
+')">(What's this?)</A></FONT></TD>
  <TD><INPUT TYPE="text" NAME="sauthor" SIZE=50 MAXLENGTH=100></TD>
 </TR>
 
 [%# The reviewer input field #%]
 <TR>
- <TD>Reviewer: </TD>
+ <TD>Reviewer: <FONT SIZE="-2"><A HREF="javascript:alert('
+Constrain the search on topic reviewer, which may be wildcarded\n
+as paul* or paul*company*.
+')">(What's this?)</A></FONT></TD>
  <TD><INPUT TYPE="text" NAME="sreviewer" SIZE=50 MAXLENGTH=100></TD>
 </TR>
 
 [%# The Cc input field #%]
 <TR>
- <TD>Cc: </TD>
+ <TD>Cc: <FONT SIZE="-2"><A HREF="javascript:alert('
+Constrain the search on topic CC, which may be wildcarded\n
+as group* or group*company*.
+')">(What's this?)</A></FONT></TD>
  <TD><INPUT TYPE="text" NAME="scc"  SIZE=50 MAXLENGTH=100></TD>
 </TR>
 
 [%# The Bug id input field #%]
 [% IF bugdb_enabled != 0 %]
 <TR>
- <TD>Bug ID: </TD>
+ <TD>Bug ID: <FONT SIZE="-2"><A HREF="javascript:alert('
+Constrain the search on the topic bugid.  This field\n
+cannot be wildcarded.
+')">(What's this?)</A></FONT>
+</TD>
  <TD><INPUT TYPE="text" NAME="sbugid"  SIZE=50 MAXLENGTH=100></TD>
 </TR>
 [% END %]
 
 [%# The state multi-select #%]
 <TR>
- <TD>State: </TD>
+ <TD>State: <FONT SIZE="-2"><A HREF="javascript:alert('
+Constrain the search on the topic\'s state.  Multiple\n
+fields can be selected here by holding down the control\n
+button while selecting.  State \'Any\' indicates the\n
+returned topics can be in any state.
+')">(What's this?)</A></FONT></TD>
  <TD><SELECT NAME="state_group" SIZE=3 MULTIPLE>
        [% FOREACH state = states %]
            [% IF state == 'Open' %]
@@ -55,7 +73,12 @@
 
 [%# The project multi-select #%]
 <TR>
- <TD>Project: </TD>
+ <TD>Project: <FONT SIZE="-2"><A HREF="javascript:alert('
+Constrain the search on topic project membership.\n
+Multiple fields can be selected here by holding down the\n
+control button while selecting.  State \'Any\' indicates the\n
+returned topics can in any project.
+')">(What's this?)</A></FONT></TD>
  <TD><SELECT NAME="project_group" SIZE=3 MULTIPLE>
        [% FOREACH project = projects %]
            [% IF project.name == 'Any' %]
@@ -70,7 +93,10 @@
 
 [%# The contains text input field and checkbox #%]
 <TR>
- <TD>Contains text: </TD>
+ <TD>Contains text: <FONT SIZE="-2"><A HREF="javascript:alert('
+Constrain the search on text contained in the title, description,\n
+comment, body and filename topic attributes.  Text can be wildcarded.
+')">(What's this?)</A></FONT></TD>
  <TD><INPUT TYPE="text" NAME="stext"  SIZE=50 MAXLENGTH=100></TD>
 </TR>
 <TR>
