@@ -15,6 +15,10 @@ Version 1.8.0
 * Use tempfile() in Parser.pm to close a potential security hole, from
   Jason Remillard.
 
+* The topic search screen has been reworked to contain "What's this?"
+  links to make the individual search fields clearer.  Also, allowed
+  the use of wildcards with the Author, Reviewer and Cc search fields.
+
 Version 1.7.8
 
 * If a badly-formatted repository value from codestriker.conf is used
